publish: publish 0.0.1, add keywords & update readme

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "build/module/index.js",
   "repository": "https://github.com/foreseaz/test",
   "license": "MIT",
-  "keywords": [],
+  "keywords": ["CovenantSQL", "database", "blockchain", "javascript", "typescript", "web", "node", "api"],
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/**.spec.ts' --exec 'ts-node' src/__tests__/integration.ts",
     "describe": "npm-scripts-info",
