--- a/package.json
+++ b/package.json
@@ -65,15 +65,18 @@
     "debug": "^4.1.1",
     "isomorphic-ws": "^4.0.1",
     "keyvenant": "^0.0.1",
+    "lodash": "^4.17.11",
     "uuid": "^3.3.2",
     "ws": "^6.1.2"
   },
   "devDependencies": {
     "@types/debug": "^0.0.31",
     "ava": "1.0.0-beta.7",
+    "chalk": "^2.4.2",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^2.0.1",
+    "gradient-string": "^1.2.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.1.0",
@@ -85,7 +88,8 @@
     "tslint-config-prettier": "^1.17.0",
     "tslint-immutable": "^5.0.0",
     "typedoc": "^0.13.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "update-notifier": "^2.5.0"
   },
   "ava": {
     "failFast": true,
